# minidb

./: CMakeLists.txt
src/: index_manager.cc  index_manager.h  record_manager.cc  sql_statement.cc
